core-macros/tests/compile_fail/unique_on_vec.stderr
error: `#[unique]` cannot be used on `Vec` — UNIQUE indexes only make sense on scalar fields
  --> tests/compile_fail/unique_on_vec.rs:10:5
   |
10 | /     #[unique]
11 | |     pub tags: Vec<String>,
   | |_________________________^
